# shadowlink-rust-core

./: .gitignore  .gitleaks.toml  .mempalace-ignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  docker-compose.yml  fix-synapse.sh  package-lock.json  package.json
.codewhale/: instructions.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codewhale.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: checkpoint-005-session-close.md  constitution.md
.specify/workflows/: workflow-registry.json
docs/: PROJECT_MANIFEST.md  coverage.md  index.md
docs/.vitepress/: config.mts
docs/arc42/: 01-introduction-and-goals.md  02-architecture-constraints.md  03-system-scope-and-context.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-concepts.md  09-architecture-decisions.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md  index.md
scripts/: install-gitleaks.sh  register_test_users.py  setup-synapse.sh
specs/001-shadowlink-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
src/: client.rs  encryption.rs  error.rs  ffi.rs  lib.rs  location.rs  messaging.rs  rooms.rs
tests/: common.rs  spec_contracts.rs  test_family_rooms_003.rs  test_us1_connect.rs  test_us2_rooms.rs  test_us3_messaging.rs  test_us4_location.rs  test_us5_persistence.rs
(+10 files in other folders)
